--- a/bentota.html
+++ b/bentota.html
@@ -72,7 +72,7 @@ wght@0,100;0,300;0,400;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
   
   
           <div class="slide s1">
-              <img src="images/bn1.webp" alt="">
+              <img src="bn1.webp" alt="">
           </div>
           <div class="slide">
             <img src="images/bn2.webp" alt="">
