--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ hatcheries: Hikkaduwa, Kosgoda, and Bentota. From rescuing turtle eggs to rehabi
 
   <div class="row">
     <div class="campus-col">
-      <img src="C:\Users\harit\OneDrive\Documents\Desktop\WDOS-Assignment\images\home1.jpeg">
+      <img src="C:\Users\harit\OneDrive\Documents\Desktop\WDOS-Assignment\images3\home1.jpeg">
       <div class="layer">
         <h3>TURTLE-LY<BR>AWESOME</h3>
         </h3>
@@ -88,7 +88,7 @@ hatcheries: Hikkaduwa, Kosgoda, and Bentota. From rescuing turtle eggs to rehabi
       </div>
     </div>
     <div class="campus-col">
-      <img src="C:\Users\harit\OneDrive\Documents\Desktop\WDOS-Assignment\images\home2.webp">
+      <img src="C:\Users\harit\OneDrive\Documents\Desktop\WDOS-Assignment\images3\home2.webp">
       <div class="layer">
         <h3>TURTLE-LY<BR>AWESOME</h3>
         </h3>
